[project]
name = "riosandbox"
version = "0.1.0"
description = "Play with Rio UI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rio-ui==0.11.1",
]

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "pytest>=8.3.5",
    "pytest-dotenv>=0.5.2",
    "rio-ui[window]==0.11.1",
]
